--- a/OpenFiddle/packages.config
+++ b/OpenFiddle/packages.config
@@ -21,6 +21,7 @@
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
+  <package id="NewRelic.Azure.WebSites" version="2.24.218.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
