--- a/OpenFiddle/packages.config
+++ b/OpenFiddle/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="CodeMirror.Base" version="3.02" targetFramework="net45" />
   <package id="CodeMirror.Modes" version="3.01" targetFramework="net45" />
   <package id="jQuery" version="1.8.3" targetFramework="net45" />
@@ -24,6 +25,6 @@
   <package id="NewRelic.Azure.WebSites" version="2.24.218.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
-  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="2.1.0.0-rc" targetFramework="net45" />
 </packages>
