--- a/OpenFiddle/OpenFiddle.csproj
+++ b/OpenFiddle/OpenFiddle.csproj
@@ -319,7 +319,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\Index.cshtml" />
