--- a/OpenFiddle/packages.config
+++ b/OpenFiddle/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="Autofac" version="3.4.0" targetFramework="net45" />
+  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net45" />
   <package id="CodeMirror.Base" version="3.02" targetFramework="net45" />
   <package id="CodeMirror.Modes" version="3.01" targetFramework="net45" />
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
