--- a/Src/ApiServer/ApiServer.csproj
+++ b/Src/ApiServer/ApiServer.csproj
@@ -76,6 +76,7 @@
     <Reference Include="Microsoft.Owin.Security.OAuth">
       <HintPath>..\..\packages\Microsoft.Owin.Security.OAuth.3.0.1\lib\net45\Microsoft.Owin.Security.OAuth.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -198,7 +199,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ConsoleController.cs" />
-    <Compile Include="Controllers\IntelliSenseController.cs" />
+    <Compile Include="Controllers\IDEController.cs" />
     <Compile Include="Controllers\MvcController.cs" />
     <Compile Include="Controllers\ScriptController.cs" />
     <Compile Include="Global.asax.cs">
@@ -212,8 +213,9 @@
     <Compile Include="Models\Account\User.cs" />
     <Compile Include="Models\Console\ConsoleInput.cs" />
     <Compile Include="Models\Console\ConsoleOutput.cs" />
-    <Compile Include="Models\IntelliSense\AutoCompleteSuggestions.cs" />
-    <Compile Include="Models\IntelliSense\SyntaxErrors.cs" />
+    <Compile Include="Models\Ide\AutoCompleteSuggestions.cs" />
+    <Compile Include="Models\Ide\ConvertInput.cs" />
+    <Compile Include="Models\Ide\SyntaxErrors.cs" />
     <Compile Include="Models\Shared\Language.cs" />
     <Compile Include="Models\Script\ScriptInput.cs" />
     <Compile Include="Models\Script\ScriptOutput.cs" />
