--- a/Src/ApiServer/packages.config
+++ b/Src/ApiServer/packages.config
@@ -24,6 +24,15 @@
   <package id="Microsoft.AspNet.WebApi.Tracing" version="4.0.30506" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.CodeAnalysis" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.Composition" version="1.0.27" targetFramework="net451" />
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net40" />
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net40" />
@@ -38,6 +47,8 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net451" />
+  <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net451" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
 </packages>
