--- a/Src/ApiServer/packages.config
+++ b/Src/ApiServer/packages.config
@@ -3,7 +3,6 @@
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="jQuery" version="1.8.2" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net40" />
-  <package id="jQuery.Validation" version="1.10.0" targetFramework="net40" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
@@ -28,8 +27,11 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Features" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.Features" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Features" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="net451" />
