--- a/Src/ApiServer.Tests/packages.config
+++ b/Src/ApiServer.Tests/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Moq" version="4.2.1507.0118" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net46" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net46" />
