--- a/Src/ApiServer/Web.config
+++ b/Src/ApiServer/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ApiServer-20150713110506;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ApiServer-20150713110506.mdf" />
+    <add name="TableStorage" connectionString="useDevelopmentStorage=true" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -198,6 +198,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Composition.Hosting" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.30.0" newVersion="1.0.30.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
