--- a/Src/ApiServer/packages.config
+++ b/Src/ApiServer/packages.config
@@ -39,6 +39,7 @@
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net46" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net46" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net46" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net46" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
@@ -47,6 +48,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net451" />
@@ -54,4 +56,5 @@
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
+  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net46" />
 </packages>
